# coq2vec

./: README.md  hyperparameter_search.py  setup.cfg  test_decode.py  test_train.py
src/coq2vec/: __init__.py
