[metadata]
name = coq2vec
version = 0.0.1
author = Alex Sanchez-Stern
author_email = alex.sanchezstern@gmail.com
description = A module for encoding coq terms into fixed-width vectors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HazardousPeach/coq2vec

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch
    tqdm
    tensorboard
    pandas
    tabulate
    ray
    torchtext
    packaging
    optuna

[options.packages.find]
where = src
